Format index.html
Cleaning up lines and organizing meta tags

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
 
-    <h1>Headline 1</h1>
-    <h2>Headline 1</h2>
-    <h3>Headline 1</h3>
-    <h4>Headline 1</h4>
-    <h5>Headline 1</h5>
-    <h6>Headline 1</h6>
+<head>
+  <meta charset="utf-8">
 
-  </body>
+  <!-- title -->
+  <title></title>
+
+  <!-- styling -->
+  <link rel="stylesheet" href="css/main.css">
+
+  <!-- typography -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+  <!-- typography -->
+  <main>
+    <div class="container">
+      <h1>Headline 1</h1>
+      <h2>Headline 1</h2>
+      <h3>Headline 1</h3>
+      <h4>Headline 1</h4>
+      <h5>Headline 1</h5>
+      <h6>Headline 1</h6>
+    </div>
+  </main>
+
+</body>
+
 </html>
