--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <!-- typography -->
-  <main>
+  <section>
     <div class="container">
       <h1>Headline 1</h1>
       <h2>Headline 1</h2>
@@ -26,7 +26,17 @@
       <h5>Headline 1</h5>
       <h6>Headline 1</h6>
     </div>
-  </main>
+  </section>
+
+  <!-- buttons -->
+  <section>
+    <div class="container">
+      <button type="button" name="button" class="button">Button Primary</button>
+      <button type="button" name="button" class="button button__secondary">Button Primary</button>
+    </div>
+  </section>
+
+
 
 </body>
 
