Create colors section
- Expanded blue and purple colors found in the base.json
- Update styleguide.scss with color block styling

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -28,6 +28,38 @@
     </div>
   </section>
 
+  <!-- colors -->
+  <section>
+    <div class="container">
+      <h3 class="styleguide-title">Colors</h3>
+      <div class="styleguide--color blue--100">
+        blue 100
+      </div>
+      <div class="styleguide--color blue--80">
+        blue 80
+      </div>
+      <div class="styleguide--color blue--60">
+        blue 60
+      </div>
+      <div class="styleguide--color blue--40">
+        blue 40
+      </div>
+
+      <div class="styleguide--color purple--100">
+        purple 100
+      </div>
+      <div class="styleguide--color purple--80">
+        purple 80
+      </div>
+      <div class="styleguide--color purple--60">
+        purple 60
+      </div>
+      <div class="styleguide--color purple--40">
+        purple 40
+      </div>
+    </div>
+  </section>
+
   <!-- buttons -->
   <section>
     <div class="container">
