Update headlines styleguide
- Cleanup to headlines section in index.html
- Inverse colors for dark theme
- Add section title 'headlines'

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -16,15 +16,24 @@
 
 <body>
 
+  <header>
+    <div class="container">
+      <h1>Style Dictionary</h1>
+    </div>
+  </header>
+
+  <br>
+
   <!-- typography -->
   <section>
     <div class="container">
+      <h3 class="styleguide-title">Headlines</h3>
       <h1>Headline 1</h1>
-      <h2>Headline 1</h2>
-      <h3>Headline 1</h3>
-      <h4>Headline 1</h4>
-      <h5>Headline 1</h5>
-      <h6>Headline 1</h6>
+      <h2>Headline 2</h2>
+      <h3>Headline 3</h3>
+      <h4>Headline 4</h4>
+      <h5>Headline 5</h5>
+      <h6>Headline 6</h6>
     </div>
   </section>
 
