Create buttons section
- Buttons section scss
- Buttons section html in index.html
- Primary and secondary styling

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -72,8 +72,9 @@
   <!-- buttons -->
   <section>
     <div class="container">
+      <h3 class="styleguide-title">Buttons</h3>
       <button type="button" name="button" class="button">Button Primary</button>
-      <button type="button" name="button" class="button button__secondary">Button Primary</button>
+      <button type="button" name="button" class="button button__secondary">Button Secondary</button>
     </div>
   </section>
 
